--- a/work.html
+++ b/work.html
@@ -60,7 +60,7 @@
         <div class="projects">
             <div class="item">
                 <a href="#!">
-                    <img src="img/mockup2.PNG" alt="project">
+                    <img src="/img/mockup2.PNG" alt="project" height="229px">
                 </a>
                 <a href="#" class="btn-light">
                     <i class="fas fa-eye"></i> MyTunes Website
